# conways-game-of-life

./: .gitignore  Makefile  README.md  gol.c  meson.build
include/: color.h  tile.h
src/: color.c  gol.c  tile.c
